Built-in Exception class-IO Exception i.e Compile Time error
/*Built-in Exception class....
 IO Exception with try and catch
 Compile Time error
 */
 import java.io.*;
class Demo
{
 public static void main(String arg[])
   {
     DataInputStream din=new DataInputStream(System.in);
     System.out.println("Enter Name:");
     String s1=din.readLine();
     System.out.println("Name="+s1);
    }
   }

/*
Output:-
bcs@PRATHAMA:~$ javac IO_Exception.java
IO_Exception.java:11: error: unreported exception IOException; must be caught or declared to be thrown
     String s1=din.readLine();
                           ^
Note: IO_Exception.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
*/
